20251213_設計・DB定義追加

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body{line-height:1;overflow-wrap:break-word;word-wrap:break-word}
 input,textarea,select{font-family:inherit;font-size:inherit;color:inherit;vertical-align:middle;box-sizing:border-box}
 a{margin:0;padding:0;text-decoration:none;outline:none;font-size:100%;vertical-align:baseline;background:transparent}
 a img{border-style:none}
-ul,li{list-style-type:none}
 .cf:before,.cf:after{content:" ";display:table}.cf:after{clear:both}
 
 /* ===================================
@@ -63,6 +62,14 @@ border-top:1px dashed #000;
 margin:0 -10px;
 padding:5px 10px
 }
+
+.menu ul,li{
+	list-style-type:none;
+}
+.contents ul,li,ol {
+	margin-left:1em;
+}
+
 
 /* ===================================
 index
@@ -246,6 +253,61 @@ padding:5px
 background:#fff;
 border:1px solid;
 padding:5px
+}
+.ddl{
+margin:2em 0;
+}
+
+.mandatory:after {
+content: "*必須";
+color:red;
+vertical-align: super; /* 上付きに配置 */
+font-size: 0.6em; /* サイズを小さく調整 */
+}
+
+/* ===================================
+テーブル定義
+=================================== */
+/* ddlクラス内のtable全体に適用 */
+.ddl table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 10px 0;
+  border: 1px solid #999; /* 外枠は実線 */
+}
+/* ヘッダー部分 */
+.ddl table th {
+  background-color: #e6f2ff;   /* 薄青色 */
+  border: 1px solid #999;      /* ヘッダーは実線 */
+  padding: 3px 5px;
+  text-align: left;
+}
+/* データ部分 */
+.ddl table td {
+  border-left: 1px solid #999;   /* 列の区切りは実線 */
+  border-right: 1px solid #999;  /* 列の区切りは実線 */
+  border-top: 1px dotted #999;   /* 行を区切る水平線は点線 */
+  border-bottom: 1px dotted #999;/* 行を区切る水平線は点線 */
+  padding: 3px 5px;
+  font-size: 0.8em;
+}
+/* テーブル名見出し */
+.ddl h3 {
+  margin: 8px 0;
+  color: #333;
+}
+/* 検討中行 */
+.ddl table tr.tbc {
+  background-color: #e0e0e0; /* より濃いグレーで明確に */
+  color: #444;               /* 文字色も少し濃くして可読性を確保 */
+}
+/* 備考欄に注記を追加 */
+.ddl table tr.tbc td:last-child::after {
+  content: " *検討中";
+  color: #555;               /* 注記文言も濃いグレーで見やすく */
+  font-style: italic;
+vertical-align: super; /* 上付きに配置 */
+font-size: 0.4em; /* サイズを小さく調整 */
 }
 
 /* ===================================
